# learning-cmake

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt  hello.f90
